<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".IP"
    android:background="@drawable/background"
    style="@style/AppTheme">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/head"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/ic_ip"
            android:src="@drawable/ic_info"/>
        <TextView
            android:id="@+id/title_ip"
            android:layout_width="match_parent"
            android:fontFamily="sans-serif-thin"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:paddingLeft="10dp"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            android:text="@string/Ip"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/but1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@id/head"
        android:orientation="horizontal">
        <Button
            android:id="@+id/m"
            android:layout_marginLeft="16dp"
            android:layout_width="150dp"
            android:background="#80ffffff"
            android:layout_height="50dp"
            android:text="@string/IP_Odt"
            android:textColor="#6619191d"
            android:gravity="center"/>
        <Button
            android:id="@+id/odt"
            android:layout_marginLeft="16dp"
            android:layout_width="150dp"
            android:background="#80ffffff"
            android:layout_height="50dp"
            android:text="@string/IP_mairie"
            android:textColor="#6619191d"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/but2"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/but1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/urg"
            android:layout_marginLeft="16dp"
            android:layout_width="150dp"
            android:background="#80ffffff"
            android:layout_height="50dp"
            android:text="@string/IP_urg"
            android:textColor="#6619191d"
            android:gravity="center"/>
        <Button
            android:id="@+id/cont"
            android:layout_marginLeft="16dp"
            android:layout_width="150dp"
            android:background="#80ffffff"
            android:layout_height="50dp"
            android:text="@string/IP_contact"
            android:textColor="#6619191d"
            android:gravity="center"/>
    </LinearLayout>
    <TextView
        android:layout_below="@id/but2"
        android:layout_marginTop="24dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#6619191d"
        android:background="#80FFFFFF"
        android:text="@string/desc_lieu1"/>
    </RelativeLayout>