<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    tools:showIn="@layout/home_screen"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lagrosse"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/ic_home"
            android:src="@drawable/home"/>
        <TextView
            android:id="@+id/title_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:paddingLeft="10dp"
            android:fontFamily="sans-serif-thin"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            android:text="@string/yo"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_below="@id/lagrosse"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textColor="#FFFFFF"
        android:fontFamily="sans-serif-thin"
        android:id="@+id/welcome"
        android:textAlignment="center"
        android:textSize="35sp"
        android:text="@string/Welcome"
        android:typeface="sans" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_below="@id/welcome">
        <Button
            android:layout_width="160dp"
            android:layout_height="150dp"
            android:textSize="20sp"
            android:textColor="#6619191d"
            android:gravity="center"
            android:onClick="startCircuits"
            android:text="@string/Circuits"
            android:background="#A6FFFFFF"
            android:id="@+id/Circuits"/>
        <Button
            android:background="#A6FFFFFF"
            android:layout_width="160dp"
            android:layout_height="150dp"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="#6619191d"
            android:onClick="startEvents"
            android:layout_alignParentRight="true"
            android:text="@string/Events"
            android:id="@+id/Events"/>
        <Button
            android:background="#A6FFFFFF"
            android:layout_width="160dp"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_below="@id/Circuits"
            android:text="@string/Places"
            android:textColor="#6619191d"
            android:onClick="startLav"
            android:id="@+id/Places"/>
        <Button
            android:layout_width="160dp"
            android:textSize="20sp"
            android:gravity="center"
            android:background="#A6FFFFFF"
            android:layout_height="150dp"
            android:onClick="startIP"
            android:textColor="#6619191d"
            android:text="@string/Informations"
            android:layout_below="@id/Circuits"
            android:layout_marginTop="30dp"
            android:layout_alignParentRight="true"
            android:id="@+id/Informations"/>
    </RelativeLayout>




</RelativeLayout>
