<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".lav"
    tools:showIn="@layout/lav"
    android:background="@drawable/background"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/head">
        <ImageView
            android:id="@+id/ic_lav"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/home"/>
        <TextView
            android:id="@+id/title_lav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:paddingLeft="10dp"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/Places"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
            <android.support.v7.widget.CardView
                android:layout_marginTop="25dp"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/lieu1"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                card_view:cardBackgroundColor="#00ffffff">
                <RelativeLayout
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/title1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lieu_1"
                        android:padding="10dp"
                        android:textColor="#6619191d"
                        android:textSize="20sp"
                        android:background="#66ffffff"/>
                    <TextView
                        android:id="@+id/desc1"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:background="#00ffffff"
                        android:text="@string/desc_lieu1"
                        android:textSize="15sp"
                        android:layout_marginRight="10dp"
                        android:textColor="#66ffffff"
                        android:layout_marginTop="16dp"
                        android:foregroundGravity="center"
                        android:layout_below="@id/title1"/>
                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:src="@drawable/test"
                        android:layout_toRightOf="@id/desc1"
                        />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_below="@id/lieu1"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/lieu2"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            card_view:cardBackgroundColor="#00ffffff">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">
                <TextView
                    android:id="@+id/title2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lieu_2"
                    android:padding="10dp"
                    android:textColor="#6619191d"
                    android:textSize="20sp"
                    android:background="#66ffffff"/>
                <TextView
                    android:id="@+id/desc2"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:background="#00ffffff"
                    android:text="@string/desc_lieu2"
                    android:textSize="15sp"
                    android:layout_marginRight="10dp"
                    android:textColor="#66ffffff"
                    android:layout_marginTop="16dp"
                    android:foregroundGravity="center"
                    android:layout_below="@id/title2"/>
                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/test"
                    android:layout_toRightOf="@id/desc2"
                    />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_below="@id/lieu2"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/lieu3"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            card_view:cardBackgroundColor="#00ffffff">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">
                <TextView
                    android:id="@+id/title3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lieu_3"
                    android:padding="10dp"
                    android:textColor="#6619191d"
                    android:textSize="20sp"
                    android:background="#66ffffff"/>
                <TextView
                    android:id="@+id/desc3"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:background="#00ffffff"
                    android:text="@string/desc_lieu3"
                    android:textSize="15sp"
                    android:layout_marginRight="10dp"
                    android:textColor="#66ffffff"
                    android:layout_marginTop="16dp"
                    android:foregroundGravity="center"
                    android:layout_below="@id/title3"/>
                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/test"
                    android:layout_toRightOf="@id/desc3"
                    />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </TableLayout></ScrollView>
</LinearLayout>